MultiSite: Backup and restore functionality -Fixed the visibility mode and proper folder structure. -Added a websiteBackup icon
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@35679 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/core_modules/MultiSite/View/Style/Backend.css
+++ b/core_modules/MultiSite/View/Style/Backend.css
@@ -50,11 +50,20 @@ a.showLicense {
     cursor: pointer;
 }
 
-a.remoteWebsiteLogin, a.websiteBackup, a.websiteRestore {
+a.remoteWebsiteLogin, a.websiteRestore {
     background-image: url(../Media/RemoteLogin.png);
     display: inline-block;
     height: 16px;
     width: 16px;
+    margin-top: 4px;
+    margin-left: 4px;
+    cursor: pointer;
+}
+a.websiteBackup {
+    background-image: url(../Media/Backup.png);
+    display: inline-block;
+    height: 15px;
+    width: 15px;
     margin-top: 4px;
     margin-left: 4px;
     cursor: pointer;
